<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/quality"
		android:textSize="25sp"
		android:layout_margin="7dp"
		android:layout_gravity="center_horizontal"/>
    <ImageView 
        android:id="@+id/imgBear"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:contentDescription="@string/bearDescription"
		android:src="@drawable/bbsc5"
		android:layout_gravity="center_horizontal"
        />
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/rest"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
    <TextView
        android:id="@+id/restVal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/number"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/movement"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
    <TextView
        android:id="@+id/movementVal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/number"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/noise"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
    <TextView
        android:id="@+id/noiseVal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/number"
		android:textSize="15sp"
		android:layout_margin="7dp"/>
</LinearLayout>